@@ -142,6 +142,12 @@ Version 7.1 12-Mar-07
 
 21. Added PCRE_NEWLINE_ANYCRLF which is like ANY, but matches only CR, LF, or
     CRLF as a newline sequence.
+    
+22. Code for handling Unicode properties in pcre_dfa_exec() wasn't being cut
+    out by #ifdef SUPPORT_UCP. This did no harm, as it could never be used, but 
+    I have nevertheless tidied it up.  
+    
+23. Added some casts to kill warnings from HP-UX ia64 compiler. 
 
 
 Version 7.0 19-Dec-06
